略作修改 优化发布命令

--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,12 @@
     {
       "name": "zrone",
       "email": "xujining2008@126.com"
+    },
+    {
+      "name": "meilovegui",
+      "info": "ÂÔ×÷ÐÞ¸Ä"
     }
+    
 
   ],
   "require": {
